compiler/testData/diagnostics/tests/varargs/unresolvedVarargType.fir.kt
// RUN_PIPELINE_TILL: FRONTEND
fun testVarArgs(vararg v: <!UNRESOLVED_REFERENCE!>Smth<!>) {}

/* GENERATED_FIR_TAGS: functionDeclaration, vararg */
